--- a/spotify.cfg.template
+++ b/spotify.cfg.template
@@ -3,4 +3,4 @@
 username=xxx
 client_id=yyy
 client_secret=zzz
-redirect_uri=https://localhost:8888/callback/
+redirect_uri=https://localhost:8080/callback
